re PR middle-end/15666 ([unit-at-a-time] Gcc abort on valid code)

2004-05-31  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/15666
	* cgraph.c (cgraph_remove_node): Don't call htab_clear_slot if
	we can't find the slot. Abort if we can't find slot and the
	node isn't for a builtin function.

From-SVN: r82521