gcc/cgraph.c
@@ -242,7 +242,16 @@ cgraph_remove_node (struct cgraph_node *node)
     htab_find_slot_with_hash (cgraph_hash, DECL_ASSEMBLER_NAME (node->decl),
 			      IDENTIFIER_HASH_VALUE (DECL_ASSEMBLER_NAME
 						     (node->decl)), NO_INSERT);
-  htab_clear_slot (cgraph_hash, slot);
+  if (slot == 0)
+    {
+      /* We use DECL_ASSEMBLER_NAME as key, which may not work in
+	 all cases. See PR/15666. Gcc 3.5 uses DECL_UID as key,
+	 which doesn't have this problem.  */
+      if (!DECL_BUILT_IN (node->decl))
+	abort ();
+    }
+  else
+    htab_clear_slot (cgraph_hash, slot);
   /* Do not free the structure itself so the walk over chain can continue.  */
 }
 
